adicionado inclusao de usuário, nova tela de login, arquivo css

--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -1,6 +1,8 @@
+
 {% extends "model-page.html" %}
 
 {% block content %}
+<div class="agenda-wrapper">
     <h2>Agendamentos</h2>
     <a href="evento/">
         <button type="button">Novo Evento</button>
@@ -18,4 +20,5 @@
             </li>
         {% endfor %}
         </ul>
+</div>
 {% endblock %}
