--- a/templates/model-header.html
+++ b/templates/model-header.html
@@ -1,6 +1,10 @@
 
+    {% load static %}
+
     <meta charset="UTF-8">
-    <title>Agenda</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'agenda/style.css' %}">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
+    <title class="">Agenda</title>
     <div align="right">
         <a href="/logout">logout</a>
     </div>
