--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Agenda</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form action="submit" method="POST">{% csrf_token %}
-        <div align="center">
-            <label>Usuario</label>
-            <input type="text" name="username">
-            <label>Password</label>
-            <input type="password" name="password">
-            <button type="submit">Entrar</button>
-        </div>
-    </form>
+    {% load static %}
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
+    <link rel="stylesheet" href="{% static 'agenda/css/style.css' %}">
 
+</head>
+<body class="login-wrap">
+<div class="login-wrap">
+	<div class="login-html">
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+		<div class="login-form">
+			<div class="sign-in-htm">
+				<form action="submit" method="POST"> {% csrf_token %}
+					<div class="group">
+						<label for="user" class="label">Username</label>
+						<input id="user" type="text" class="input" name="username">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Password</label>
+						<input id="pass" type="password" class="input" data-type="password" name="password">
+					</div>
+					<div class="group">
+						<input id="check" type="checkbox" class="check" checked>
+						<label for="check"><span class="icon"></span> Keep me Signed in</label>
+					</div>
+					<div class="group">
+						<button type="submit" class="button">Sign In</button>
+					</div>
+					<div class="hr"></div>
+					<div class="foot-lnk">
+						<a href="#forgot">Forgot Password?</a>
+					</div>
+				</form>
+			</div>
+			<div class="sign-up-htm">
+				<form action="cadastro/submit" method="POST"> {% csrf_token %}
+					<div class="group">
+						<label for="user" class="label">Username</label>
+						<input id="user" type="text" class="input" name="username">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Password</label>
+						<input id="pass" type="password" class="input" data-type="password" name="password">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Repeat Password</label>
+						<input id="pass" type="password" class="input" data-type="password" name="password_repeat">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Email Address</label>
+						<input id="pass" type="text" class="input" name="emal">
+					</div>
+					<div class="group">
+						<button type="submit" class="button" >Sign Up</button>>
+					</div>
+					<div class="hr"></div>
+					<div class="foot-lnk">
+						<label for="tab-1">Already Member?</a>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
+    <!-- final do container -->
     {% for message in messages %}
         <div align="center">
             <strong>Erro: </strong>{{ message }}
