--- a/templates/model-page.html
+++ b/templates/model-page.html
@@ -9,16 +9,46 @@
     {% load static %}
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
     <link rel="stylesheet" href="{% static 'agenda/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'agenda/css/bootstrap.min.css' %}">
 
     <title>Agenda</title>
-    <div align="right">
-        <a href="/logout">logout</a>
-    </div>
-    <h1>Agenda</h1>
 
 </head>
 <body>
+    <header class="p-3 bg-dark text-white">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                   Agenda
+                </a>
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+                </ul>
+                
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+                </form>
+        
+                <div class="text-end">
+                    <button type="button" class="btn btn-outline-light me-2" disabled>Login</button>
+                    <a href="/logout">
+                        <button type="button" class="btn btn-warning">Sign-up</button>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
     {% block content %} {% endblock %}
     {% include "model-footer.html" %}
+    <script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
