Pequenas alterações no layout, com bootstrap

--- a/templates/evento.html
+++ b/templates/evento.html
@@ -22,6 +22,7 @@
                 <label class="form-label">Local</label>
                 <textarea class="form-control" name="local" rows="2" cols="24">{{ evento.local }} </textarea>
             </div>
+            <hr class="my-4">
             <div class="col-12">
                 <a>
                     <button class="btn btn-outline-secondary" type="submit">Salvar</button>
