--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -3,29 +3,21 @@
 
 {% block content %}
 <div class="agenda-wrapper" style="padding-top: 30px;">
-    <div class="container shadow p-3 mb-5 bg-body rounded">
+    <div class="container shadow p-3 mb-5 bg-body rounded justify-content-md-end ">
         <h2>Agendamentos</h2>
         <a class="btn btn-outline-secondary" href="evento/"> Novo Evento </a>
-        <a class="btn btn-outline-secondary left" href="?{{pcal}}" > Mês Anterior </a>
-	    <a class="btn btn-outline-secondary right" href="?{{ncal}}"> Próximo Mês </a>
+        <a class="btn btn-outline-secondary float-end" href="?{{ncal}}">
+            Próximo Mês
+            <i class="fas fa-angle-right"></i></a>
+        <a class="btn btn-outline-secondary float-end" href="?{{pcal}}" >
+            <i class="fas fa-angle-left"></i>
+            Mês Anterior </a>
+
 
         {{calendar | safe}}
+
     </div>
-<!--
-    <ul style="font-size: 18px">
-        {% for evento in eventos %}
-            <li>
-                <div style={% if evento.get_evento_atrasado %}
-                                "color:red"
-                            {% endif %}>
-                    {{evento.titulo}} - {{evento.get_data_evento}}
-                    ( <a href="evento/?id={{evento.id}}">Editar</a> /
-                      <a href="evento/delete/{{evento.id}}/">Excluir</a>)
-                </div>
-            </li>
-        {% endfor %}
-        </ul>
--->
+
 </div>
 
 {% endblock %}
