--- a/templates/model-page.html
+++ b/templates/model-page.html
@@ -50,5 +50,6 @@
     {% block content %} {% endblock %}
     {% include "model-footer.html" %}
     <script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
+    <script src="https://kit.fontawesome.com/9918011f2a.js"></script>
 </body>
 </html>
